Replaced example.com with yourdomain.com

--- a/src/apache/conf.d/packages.ssl.conf
+++ b/src/apache/conf.d/packages.ssl.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
-ServerName packages.example.com
-ServerAlias www.packages.example.com
+ServerName packages.yourdomain.com
+ServerAlias www.packages.yourdomain.com
 
 RewriteEngine On 
 RewriteCond %{HTTPS} !=on
@@ -12,13 +12,13 @@ RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,NE,L]
 
 <VirtualHost *:443>
 
-ServerName packages.example.com
-ServerAlias www.packages.example.com
+ServerName packages.yourdomain.com
+ServerAlias www.packages.yourdomain.com
 
 # Logging
 LogLevel warn
-ErrorLog packages.example.com-error_log
-CustomLog packages.example.comaccess_log combined
+ErrorLog ${APACHE_LOG_DIR}/packages.yourdomain.com-error_log
+CustomLog ${APACHE_LOG_DIR}/packages.yourdomain.com-access_log combined
 
 # Reverse proxy configuration
 <Location />
@@ -27,8 +27,8 @@ ProxyPassReverse http://localhost:10180/
 </Location>
 
 Include /etc/letsencrypt/options-ssl-apache.conf
-SSLCertificateFile /etc/letsencrypt/live/example.com/cert.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
-SSLCertificateChainFile /etc/letsencrypt/live/example.com/chain.pem
+SSLCertificateFile /etc/letsencrypt/live/yourdomain.com/cert.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/yourdomain.com/privkey.pem
+SSLCertificateChainFile /etc/letsencrypt/live/yourdomain.com/chain.pem
 
 </VirtualHost>
