--- a/src/apache/conf.d/dregistryui.ssl.conf
+++ b/src/apache/conf.d/dregistryui.ssl.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
-ServerName dregistryui.shride.xyz
-ServerAlias www.dregistryui.shride.xyz
+ServerName dregistryui.yourdomain.com
+ServerAlias www.dregistryui.yourdomain.com
 
 RewriteEngine On 
 RewriteCond %{HTTPS} !=on 
@@ -12,13 +12,13 @@ RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,NE,L]
 
 <VirtualHost *:443>
 
-ServerName dregistryui.shride.xyz
-ServerAlias www.dregistryui.shride.xyz
+ServerName dregistryui.yourdomain.com
+ServerAlias www.dregistryui.yourdomain.com
 
 # Logging
 LogLevel warn
-ErrorLog dregistryui.shride.xyz-error_log
-CustomLog dregistryui.shride.xyz-access_log combined
+ErrorLog ${APACHE_LOG_DIR}/dregistryui.yourdomain.com-error_log
+CustomLog ${APACHE_LOG_DIR}/dregistryui.yourdomain.com-access_log combined
 
 # Reverse proxy configuration
 <Location />
@@ -27,8 +27,8 @@ ProxyPassReverse http://localhost:10580/
 </Location>
 
 Include /etc/letsencrypt/options-ssl-apache.conf
-SSLCertificateFile /etc/letsencrypt/live/shride.xyz/cert.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/shride.xyz/privkey.pem
-SSLCertificateChainFile /etc/letsencrypt/live/shride.xyz/chain.pem
+SSLCertificateFile /etc/letsencrypt/live/yourdomain.com/cert.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/yourdomain.com/privkey.pem
+SSLCertificateChainFile /etc/letsencrypt/live/yourdomain.com/chain.pem
 
 </VirtualHost>
