--- a/src/apache/conf.d/git.ssl.conf
+++ b/src/apache/conf.d/git.ssl.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
-ServerName git.example.com
-ServerAlias www.git.example.com
+ServerName git.yourdomain.com
+ServerAlias www.git.yourdomain.com
 
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
@@ -12,13 +12,13 @@ RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,NE,L]
 
 <VirtualHost *:443>
 
-ServerName git.example.com
-ServerAlias www.git.example.com
+ServerName git.yourdomain.com
+ServerAlias www.git.yourdomain.com
 
 # Logging
 LogLevel warn
-ErrorLog /var/log/httpd/git.example.com-error_log
-CustomLog /var/log/httpd/git.example.com-access_log combined
+ErrorLog ${APACHE_LOG_DIR}/git.yourdomain.com-error_log
+CustomLog ${APACHE_LOG_DIR}/git.yourdomain.com-access_log combined
 
 # Reverse proxy configuration
 <Location />
@@ -27,8 +27,8 @@ ProxyPassReverse http://localhost:10080/
 </Location>
 
 Include /etc/letsencrypt/options-ssl-apache.conf
-SSLCertificateFile /etc/letsencrypt/live/example.com/cert.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
-SSLCertificateChainFile /etc/letsencrypt/live/example.com/chain.pem
+SSLCertificateFile /etc/letsencrypt/live/yourdomain.com/cert.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/yourdomain.com/privkey.pem
+SSLCertificateChainFile /etc/letsencrypt/live/yourdomain.com/chain.pem
 
 </VirtualHost>
