Modified virtual host files and a corrected the certificate acquisition command to add the ssl conf file for apache.

--- a/src/apache/conf.d/vault.ssl.conf
+++ b/src/apache/conf.d/vault.ssl.conf
@@ -17,8 +17,8 @@ ServerAlias www.vault.yourdomain.com
 
 # Logging
 LogLevel warn
-ErrorLog ${APACHE_LOG_DIR}/vault.yourdomain.com-error_log
-CustomLog ${APACHE_LOG_DIR}/vault.yourdomain.com-access_log combined
+ErrorLog /var/log/httpd/vault.yourdomain.com-error_log
+CustomLog /var/log/httpd/vault.yourdomain.com-access_log combined
 
 # Reverse proxy configuration
 <Location />
@@ -27,8 +27,5 @@ ProxyPassReverse http://localhost:10080/
 </Location>
 
 Include /etc/letsencrypt/options-ssl-apache.conf
-SSLCertificateFile /etc/letsencrypt/live/yourdomain.com/cert.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/yourdomain.com/privkey.pem
-SSLCertificateChainFile /etc/letsencrypt/live/yourdomain.com/chain.pem
 
 </VirtualHost>
