--- a/src/apache/conf.d/project.ssl.conf
+++ b/src/apache/conf.d/project.ssl.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
-ServerName project.example.com
-ServerAlias www.project.example.com
+ServerName project.yourdomain.com
+ServerAlias www.project.yourdomain.com
 
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
@@ -12,13 +12,13 @@ RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,NE,L]
 
 <VirtualHost *:443>
 
-ServerName project.example.com
-ServerAlias www.project.example.com
+ServerName project.yourdomain.com
+ServerAlias www.project.yourdomain.com
 
 # Logging
 LogLevel warn
-ErrorLog /var/log/httpd/project.example.com-error_log
-CustomLog /var/log/httpd/project.example.com-access_log combined
+ErrorLog /var/log/httpd/project.yourdomain.com-error_log
+CustomLog /var/log/httpd/project.yourdomain.com-access_log combined
 
 # Reverse proxy configuration
 <Location />
@@ -27,8 +27,5 @@ ProxyPassReverse http://localhost:10380/
 </Location>
 
 Include /etc/letsencrypt/options-ssl-apache.conf
-SSLCertificateFile /etc/letsencrypt/live/example.com/cert.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
-SSLCertificateChainFile /etc/letsencrypt/live/example.com/chain.pem
 
 </VirtualHost>
