--- a/src/git/.env
+++ b/src/git/.env
@@ -9,8 +9,8 @@ GOGS_MYSQL_DATA=$GOGS_ROOT/mysql/data
 GOGS_HTTP_PORT=10080
 
 # MYSQL
-export GOGS_MYSQL_PORT=10306
-export GOGS_MYSQL_DATABASE=gogs
-export GOGS_MYSQL_USER=gogs
-export GOGS_MYSQL_USER_PASSWORD=g09z
-export GOGS_MYSQL_ROOT_PASSWORD=r00t
+GOGS_MYSQL_PORT=10306
+GOGS_MYSQL_DATABASE=gogs
+GOGS_MYSQL_USER=gogs
+GOGS_MYSQL_USER_PASSWORD=g09z
+GOGS_MYSQL_ROOT_PASSWORD=r00t
