--- a/src/git/.env
+++ b/src/git/.env
@@ -1,9 +1,8 @@
 COMPOSE_FILE=git_docker_compose.yml
 
 # STORAGE
-GOGS_ROOT=/var/dev/gogs
-GOGS_DATA=$GOGS_ROOT/data
-GOGS_MYSQL_DATA=$GOGS_ROOT/mysql/data
+GOGS_DATA=$DEV_ROOT/gogs/data
+GOGS_MYSQL_DATA=$DEV_ROOT/gogs/mysql/data
 
 # NETWORK
 GOGS_SSH_PORT=10022
