created an sh script for setting up folder structure for docker volumes.

--- a/src/git/.env
+++ b/src/git/.env
@@ -1,8 +1,8 @@
 COMPOSE_FILE=git_docker_compose.yml
 
 # STORAGE
-GOGS_DATA=@DEV_ROOT/gogs/data
-GOGS_MYSQL_DATA=@DEV_ROOT/gogs/mysql/data
+GOGS_DATA=@GOGS_DATA
+GOGS_MYSQL_DATA=@GOGS_MYSQL_DATA
 
 # NETWORK
 GOGS_SSH_PORT=10022
