--- a/src/packages/.env
+++ b/src/packages/.env
@@ -1,9 +1,9 @@
 COMPOSE_FILE=packages_docker_compose.yml
 
 # STORAGE
-PROGET_PACKAGES=@DEV_ROOT/proget/packages
-PROGET_EXTENSIONS=@DEV_ROOT/proget/extensions
-PROGET_POSTGRESQL_DATA=@DEV_ROOT/proget/postgresql/data
+PROGET_PACKAGES=@PROGET_PACKAGES
+PROGET_EXTENSIONS=@PROGET_EXTENSIONS
+PROGET_POSTGRESQL_DATA=@PROGET_POSTGRESQL_DATA
 
 # NETWORK
 PROGET_HTTP_PORT=10180
