--- a/src/registry/registry_docker_compose.yml
+++ b/src/registry/registry_docker_compose.yml
@@ -3,10 +3,10 @@ version: "3.5"
 
 services:
 
-    packages-db:
+    registry-db:
       image: postgres:latest
-      container_name: packages-db
-      hostname: packages-db
+      container_name: registry-db
+      hostname: registry-db
       restart: always
       volumes:
         - proget-postgresql-data:/var/lib/postgresql/data
@@ -17,35 +17,35 @@ services:
       ports:
         - ${PROGET_POSTGRES_PORT}:5432
       networks: 
-        - packages-network
+        - registry-network
 
-    packages:
+    registry:
       image: inedo/proget:latest
-      container_name: packages
-      hostname: packages
+      container_name: registry
+      hostname: registry
       restart: always
       environment:
-        - PROGET_DATABASE=Host=packages-db; Database=${PROGET_POSTGRESQL_DATABASE}; Username=${PROGET_POSTGRESQL_USER}; Password=${PROGET_POSTGRESQL_PASSWORD};
+        - PROGET_DATABASE=Host=registry-db; Database=${PROGET_POSTGRESQL_DATABASE}; Username=${PROGET_POSTGRESQL_USER}; Password=${PROGET_POSTGRESQL_PASSWORD};
       volumes:
-        - proget-packages:/var/proget/packages
+        - proget-registry:/var/proget/registry
         - proget-extensions:/var/proget/extensions
       ports:
         - ${PROGET_HTTP_PORT}:80
       networks:
-        - packages-network
+        - registry-network
       depends_on:
-        - packages-db
+        - registry-db
 
 
 networks:
-  packages-network:
-    name: packages-network
+  registry-network:
+    name: registry-network
     driver: bridge
 
 
 volumes:
 
-    proget-packages:
+    proget-registry:
       driver_opts:
         type: none
         device: ${PROGET_PACKAGES}
