--- a/src/vault/config/consul/config.json
+++ b/src/vault/config/consul/config.json
@@ -1,8 +1,6 @@
 {
+  "datacenter": "dc1",
   "data_dir": "/consul/data",
   "log_level": "DEBUG",
-  "ui": true,
-  "ports": {
-    "dns": 53
-  }
+  "ui": true
 }
