--- a/src/vault/vault-docker-compose.yml
+++ b/src/vault/vault-docker-compose.yml
@@ -15,8 +15,7 @@ services:
       - ${CONSUL_PORT}:8500
     networks:
       - vault-network
-    command: 
-      - agent -server -bind 0.0.0.0 -client 0.0.0.0 -bootstrap-expect 1 -config-file=/consul/config/config.json
+    command: agent -server -bind 0.0.0.0 -client 0.0.0.0 -bootstrap-expect 1
   
   vault:
     image: vault:latest
@@ -29,13 +28,15 @@ services:
       - vault-config:/vault/config
       - vault-logs:/vault/file
     ports:
+      - 8300:8300
+      - 8600:8600
+      - 8600:8600/udp
       - ${VAULT_PORT}:8200
     networks:
       - vault-network
     cap_add:
       - IPC_LOCK
-    command: 
-      - server -config=/vault/config/config.hcl
+    command: server
     depends_on:
       - vault-db
 
