--- a/src/ci/ci-docker-compose.yml
+++ b/src/ci/ci-docker-compose.yml
@@ -11,8 +11,6 @@ services:
       environment:
         - MYSQL_DATABASE=${DRONE_MYSQL_DATABASE}
         - MYSQL_ROOT_PASSWORD=${DRONE_MYSQL_ROOT_PASSWORD}
-        - MYSQL_USER=${DRONE_MYSQL_USER}
-        - MYSQL_PASSWORD=${DRONE_MYSQL_USER_PASSWORD}
       ports:
         - ${DRONE_MYSQL_PORT}:3306
       networks:
@@ -51,7 +49,7 @@ services:
         - DRONE_SECRET_SECRET=${DRONE_SECRET_KEY}
         - DRONE_SECRET_ENDPOINT=http://ci-secret:3000
         - DRONE_DATABASE_DRIVER=mysql
-        - DRONE_DATABASE_DATASOURCE=${DRONE_MYSQL_USER}:${DRONE_MYSQL_USER_PASSWORD}@tcp(ci-db:3306)/${DRONE_MYSQL_DATABASE}?parseTime=true
+        - DRONE_DATABASE_DATASOURCE=root:${DRONE_MYSQL_ROOT_PASSWORD}@tcp(ci-db:3306)/${DRONE_MYSQL_DATABASE}?parseTime=true
       ports:
         - ${DRONE_HTTP_PORT}:80
       networks:
