--- a/src/ci/ci.build.sample/Dockerfile
+++ b/src/ci/ci.build.sample/Dockerfile
@@ -2,7 +2,7 @@ FROM mcr.microsoft.com/dotnet/core/sdk:2.2-alpine AS build
 WORKDIR /app
 
 COPY src/. ./build/src/
-COPY test/. ./build/test/
+COPY tests/. ./build/tests/
 
-WORKDIR /app/build/test
-RUN dotnet test
+WORKDIR /app/build/tests
+RUN dotnet test **/*.fsproj
