--- a/src/ci/ci.build.sample/Dockerfile
+++ b/src/ci/ci.build.sample/Dockerfile
@@ -7,7 +7,7 @@ COPY src/. ./build/src/
 ENV HELLO_WORLD="Hello test!"
 RUN dotnet test ./build/tests/**/*.fsproj --verbosity normal
 
-RUN dotnet publish ./build/src/ci.build.sample/ci.build.sample.fsproj --verbosity normal -c Release -o out
+RUN dotnet publish ./build/src/ci.build.sample/ci.build.sample.fsproj --verbosity normal -c Release -o ./out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-alpine AS runtime
 WORKDIR /app
