working version of Dockerfile

--- a/src/ci/ci.build.sample/Dockerfile
+++ b/src/ci/ci.build.sample/Dockerfile
@@ -4,10 +4,9 @@ WORKDIR /app
 COPY tests/. ./build/tests/
 COPY src/. ./build/src/
 
-ENV HELLO_WORLD="Hello test!"
 RUN dotnet test ./build/tests/**/*.fsproj --verbosity normal
 
-RUN dotnet publish ./build/src/ci.build.sample/ci.build.sample.fsproj --verbosity normal -c Release -o ./out
+RUN dotnet publish ./build/src/ci.build.sample/ci.build.sample.fsproj --verbosity normal -c Release -o /app/out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-alpine AS runtime
 WORKDIR /app
