added the restoration step to Dockerfile

--- a/src/ci/ci.build.sample/Dockerfile
+++ b/src/ci/ci.build.sample/Dockerfile
@@ -1,12 +1,22 @@
+# 1. Build the image
+# sudo docker build -t hello-world .
+
+# 2. Start a container
+# sudo docker run -e HELLO_WORLD='Hello World!' -d -p 9880:80 hello-world
+
+# 3. Pull the endpoint
+# sudo curl http://localhost:9880/api/hello
+
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2-alpine AS build
 WORKDIR /app
 
 COPY tests/. ./build/tests/
 COPY src/. ./build/src/
 
-RUN dotnet test ./build/tests/**/*.fsproj --verbosity normal
+RUN for file in $(find ./build -name '*.fsproj'); do dotnet restore $file --verbosity normal; done
 
-RUN dotnet publish ./build/src/ci.build.sample/ci.build.sample.fsproj --verbosity normal -c Release -o /app/out
+RUN dotnet test ./build/tests/**/*.fsproj --no-restore --verbosity normal
+RUN dotnet publish ./build/src/ci.build.sample/ci.build.sample.fsproj --no-restore --verbosity normal -c Release -o /app/out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-alpine AS runtime
 WORKDIR /app
