--- a/src/ci/ci-docker-compose.yml
+++ b/src/ci/ci-docker-compose.yml
@@ -24,9 +24,9 @@ services:
       hostname: ci-secret
       restart: always
       environment:
-        - SECRET_KEY=${DRONE_SECRET_KEY}
-        - SERVER_ADDRESS=${DRONE_SERVER_HOST}
-        - VAULT_ADDR=${VAULT_SERVER}
+        - DRONE_SECRET=${DRONE_SECRET}
+        - DRONE_DEBUG=true
+        - VAULT_ADDR=${VAULT_ADDR}
         - VAULT_TOKEN=${VAULT_TOKEN}
         - VAULT_TOKEN_RENEWAL=720h
         - VAULT_TOKEN_TTL=720h
@@ -51,9 +51,10 @@ services:
         - DRONE_TLS_AUTOCERT=false
         - DRONE_RUNNER_NETWORKS-ci-network
         - DRONE_RUNNER_CAPACITY=${DRONE_RUNNER_CAPACITY}
-        - DRONE_RPC_SECRET=${DRONE_SECRET_KEY}
         - DRONE_DATABASE_DRIVER=mysql
         - DRONE_DATABASE_DATASOURCE=root:${DRONE_MYSQL_ROOT_PASSWORD}@tcp(ci-db:3306)/${DRONE_MYSQL_DATABASE}?parseTime=true
+        - DRONE_SECRET_ENDPOINT=http://ci-secret:3000
+        - DRONE_SECRET_SECRET=DRONE_SECRET
       ports:
         - ${DRONE_HTTP_PORT}:80
       networks:
