--- a/src/ci/ci-docker-compose.yml
+++ b/src/ci/ci-docker-compose.yml
@@ -54,7 +54,7 @@ services:
         - DRONE_DATABASE_DRIVER=mysql
         - DRONE_DATABASE_DATASOURCE=root:${DRONE_MYSQL_ROOT_PASSWORD}@tcp(ci-db:3306)/${DRONE_MYSQL_DATABASE}?parseTime=true
         - DRONE_SECRET_ENDPOINT=http://ci-secret:3000
-        - DRONE_SECRET_SECRET=DRONE_SECRET
+        - DRONE_SECRET_SECRET=${DRONE_SECRET}
       ports:
         - ${DRONE_HTTP_PORT}:80
       networks:
