--- a/src/ci/ci_docker_compose.yml
+++ b/src/ci/ci_docker_compose.yml
@@ -24,7 +24,7 @@ services:
       hostname: ci-secret
       restart: always
       environment:
-        - SECRET_KEY=${DRONE_SECRET}
+        - SECRET_KEY=${DRONE_SECRET_KEY}
         - VAULT_ADDR=${VAULT_ADDR}
         - VAULT_TOKEN=${VAULT_TOKEN}
         - VAULT_TOKEN_RENEWAL=720h
@@ -54,7 +54,7 @@ services:
         - DRONE_DATABASE_DRIVER=mysql
         - DRONE_DATABASE_DATASOURCE=root:${DRONE_MYSQL_ROOT_PASSWORD}@tcp(ci-db:3306)/${DRONE_MYSQL_DATABASE}?parseTime=true
         - DRONE_SECRET_ENDPOINT=http://ci-secret:3000
-        - DRONE_SECRET_SECRET=${DRONE_SECRET}
+        - DRONE_SECRET_SECRET=${DRONE_SECRET_KEY}
       ports:
         - ${DRONE_HTTP_PORT}:80
       networks:
