--- a/src/packages/packages_docker_compose.yml
+++ b/src/packages/packages_docker_compose.yml
@@ -3,10 +3,10 @@ version: "3.5"
 
 services:
 
-    registry-db:
+    packages-db:
       image: postgres:latest
-      container_name: registry-db
-      hostname: registry-db
+      container_name: packages-db
+      hostname: packages-db
       restart: always
       volumes:
         - proget-postgresql-data:/var/lib/postgresql/data
@@ -15,37 +15,38 @@ services:
         - POSTGRES_USER=${PROGET_POSTGRESQL_USER}
         - POSTGRES_PASSWORD=${PROGET_POSTGRESQL_PASSWORD}
       ports:
-        - ${PROGET_POSTGRES_PORT}:5432
+        - ${PROGET_POSTGRESQL_PORT}:5432
       networks: 
-        - registry-network
+        - packages-network
 
-    registry:
+    packages:
       image: inedo/proget:latest
-      container_name: registry
-      hostname: registry
+      container_name: packages
+      hostname: packages
       restart: always
       environment:
-        - PROGET_DATABASE=Host=registry-db; Database=${PROGET_POSTGRESQL_DATABASE}; Username=${PROGET_POSTGRESQL_USER}; Password=${PROGET_POSTGRESQL_PASSWORD};
+        - PROGET_DATABASE=Host=packages-db; Database=${PROGET_POSTGRESQL_DATABASE}; Username=${PROGET_POSTGRESQL_USER}; Password=${PROGET_POSTGRESQL_PASSWORD};
       volumes:
-        - proget-registry:/var/proget/registry
+        - proget-packages:/var/proget/packages
         - proget-extensions:/var/proget/extensions
+        - proget-config:/usr/share/Inedo/SharedConfig
       ports:
         - ${PROGET_HTTP_PORT}:80
       networks:
-        - registry-network
+        - packages-network
       depends_on:
-        - registry-db
+        - packages-db
 
 
 networks:
-  registry-network:
-    name: registry-network
+  packages-network:
+    name: packages-network
     driver: bridge
 
 
 volumes:
 
-    proget-registry:
+    proget-packages:
       driver_opts:
         type: none
         device: ${PROGET_PACKAGES}
@@ -55,6 +56,12 @@ volumes:
       driver_opts:
         type: none
         device: ${PROGET_EXTENSIONS}
+        o: bind
+
+    proget-config:
+      driver_opts:
+        type: none
+        device: ${PROGET_CONFIG}
         o: bind
 
     proget-postgresql-data:
