--- a/src/registry/registry_docker_compose.yml
+++ b/src/registry/registry_docker_compose.yml
@@ -7,6 +7,7 @@ services:
     image: registry
     container_name: registry
     hostname: registry
+    restart: always
     ports:
       - ${REGISTRY_PORT}:5000
     volumes:
@@ -18,6 +19,7 @@ services:
   registry-ui:
     image: joxit/docker-registry-ui:static
     container_name: registry-ui
+    restart: always
     ports:
       -  ${REGISTRY_UI_PORT}:80
     environment:
