--- a/src/ci/ci_docker_compose.yml
+++ b/src/ci/ci_docker_compose.yml
@@ -18,23 +18,6 @@ services:
       volumes:
         - drone-mysql-data:/var/lib/mysql
 
-    ci-secret:
-      image: drone/vault
-      container_name: ci-secret
-      hostname: ci-secret
-      restart: always
-      environment:
-        - DRONE_SECRET=${DRONE_SECRET_KEY}
-        - VAULT_ADDR=${VAULT_ADDR}
-        - VAULT_TOKEN=${VAULT_TOKEN}
-        - VAULT_TOKEN_RENEWAL=720h
-        - VAULT_TOKEN_TTL=720h
-        #- DRONE_DEBUG=true
-      networks:
-        - ci-network
-      ports:
-        - ${DRONE_VAULT_PLUGIN_PORT}:3000
-
     ci:
       image: drone/drone
       container_name: ci
@@ -50,11 +33,10 @@ services:
         - DRONE_SERVER_PROTO=https
         - DRONE_TLS_AUTOCERT=false
         - DRONE_RUNNER_NETWORKS=ci-network
-        - DRONE_RUNNER_CAPACITY=${DRONE_RUNNER_CAPACITY}
         - DRONE_DATABASE_DRIVER=mysql
         - DRONE_DATABASE_DATASOURCE=root:${DRONE_MYSQL_ROOT_PASSWORD}@tcp(ci-db:3306)/${DRONE_MYSQL_DATABASE}?parseTime=true
-        - DRONE_SECRET_ENDPOINT=http://ci-secret:3000
-        - DRONE_SECRET_SECRET=${DRONE_SECRET_KEY}
+        - DRONE_AGENTS_ENABLED=true
+        - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
       ports:
         - ${DRONE_HTTP_PORT}:80
       networks:
@@ -64,6 +46,43 @@ services:
         - drone-data:/data
       depends_on:
         - ci-db
+
+    ci-secret:
+      image: drone/vault
+      container_name: ci-secret
+      hostname: ci-secret
+      restart: always
+      environment:
+        - DRONE_SECRET=${DRONE_SECRET}
+        - VAULT_ADDR=${VAULT_ADDR}
+        - VAULT_TOKEN=${VAULT_TOKEN}
+        - VAULT_TOKEN_RENEWAL=${VAULT_TOKEN_RENEWAL}
+        - VAULT_TOKEN_TTL=${VAULT_TOKEN_TTL}
+        - DRONE_DEBUG=true
+      networks:
+        - ci-network
+      ports:
+        - ${DRONE_VAULT_PLUGIN_PORT}:3000
+      depends_on:
+        - ci
+
+    ci-agent:
+      image: drone/agent
+      container_name: ci-agent
+      hostname: ci-agent
+      restart: always
+      environment:
+        - DRONE_RPC_SERVER=http://ci:80
+        - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
+        - DRONE_RUNNER_CAPACITY=${DRONE_RUNNER_CAPACITY}
+        - DRONE_SECRET_ENDPOINT=http://ci-secret:3000
+        - DRONE_SECRET_SECRET=${DRONE_SECRET}
+      networks:
+        - ci-network
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
+      depends_on:
+        - ci
         - ci-secret
 
 
