--- a/src/packages/packages_docker_compose.yml
+++ b/src/packages/packages_docker_compose.yml
@@ -4,7 +4,7 @@ version: "3.5"
 services:
 
     packages-db:
-      image: postgres:latest
+      image: postgres:alpine
       container_name: packages-db
       hostname: packages-db
       restart: always
