--- a/src/project/project_docker_compose.yml
+++ b/src/project/project_docker_compose.yml
@@ -5,16 +5,17 @@ services:
   back:
 
     image: dockertaiga/back
-    container_name: taiga-back
+    container_name: project-back
+    hostname: project-back
     restart: unless-stopped
     depends_on:
-      - db
-      - events
+      - project-db
+      - project-events
     networks:
-      - taiga-network
+      - project-network
     volumes:
       - taiga-back-media:/taiga-media
-      - taiga-back:/taiga-conf
+      - taiga-back-conf:/taiga-conf
     environment:
       - RABBIT_PORT=5672
       - TAIGA_HOST=${TAIGA_HOST}
@@ -32,22 +33,23 @@ services:
 
   front:
     image: dockertaiga/front
-    container_name: taiga-front
+    container_name: project-front
+    hostname: project-back
     restart: unless-stopped
     networks:
-      - taiga-network
+      - project-network
     volumes:
-      - taiga-front:/taiga-conf
+      - taiga-front-conf:/taiga-conf
     environment:
       - TAIGA_HOST=${TAIGA_HOST}
       - TAIGA_SCHEME=${TAIGA_SCHEME}
 
   db:
     image: postgres:11-alpine
-    container_name: taiga-db
+    container_name: project-db
     restart: unless-stopped
     networks:
-      - taiga-network
+      - project-network
     ports:
     - ${TAIGA_POSTGRES_PORT}:5432
     volumes:
@@ -63,93 +65,91 @@ services:
       - RABBIT_VHOST=${RABBIT_VHOST}
       - STARTUP_TIMEOUT=${STARTUP_TIMEOUT}
 
-  rabbit:
+  project-messaging:
     image: dockertaiga/rabbit
-    container_name: taiga-rabbit
+    container_name: project-messaging
+    hostname: project-messaging
     restart: unless-stopped
     networks:
-      - taiga-network
+      - project-network
     environment:
-      - POSTGRES_HOST=db
-      - RABBIT_HOST=rabbit
-      - RABBIT_USER=${RABBIT_USER}
-      - RABBIT_PASSWORD=${RABBIT_PASSWORD}
-      - RABBIT_VHOST=${RABBIT_VHOST}
+      - RABBIT_HOST=${TAIGA_RABBIT_HOST}
+      - RABBIT_USER=${TAIGA_RABBIT_USER}
+      - RABBIT_PASSWORD=${TAIGA_RABBIT_PASSWORD}
+      - RABBIT_VHOST=project-messaging
       - STARTUP_TIMEOUT=${STARTUP_TIMEOUT}
 
-  events:
+  project-events:
     image: dockertaiga/events
-    container_name: taiga-events
+    container_name: project-events
+    hostname: project-events
     restart: unless-stopped
     depends_on:
-      - rabbit
+      - project-messaging
     networks:
-      - taiga-network
+      - project-network
     environment:
-      - RABBIT_HOST=rabbit
-      - RABBIT_USER=${RABBIT_USER}
-      - RABBIT_PASSWORD=${RABBIT_PASSWORD}
-      - RABBIT_VHOST=${RABBIT_VHOST}
+      - RABBIT_HOST=${TAIGA_RABBIT_HOST}
+      - RABBIT_USER=${TAIGA_RABBIT_USER}
+      - RABBIT_PASSWORD=${TAIGA_RABBIT_PASSWORD}
+      - RABBIT_VHOST=project-messaging
       - TAIGA_SECRET=${TAIGA_SECRET}
 
-  proxy:
+  project-proxy:
     image: dockertaiga/proxy
-    container_name: taiga-proxy
+    container_name: project-proxy
+    hostname: project-proxy
     restart: unless-stopped
     depends_on:
-      - back
-      - front
-      - events
+      - project-back
+      - project-front
+      - project-events
     networks:
-      - taiga-network
+      - project-network
     ports:
-      - ${TAIGA_PROXY_PORT}:80
+      - ${PROJECT_PROXY_PORT}:80
     volumes:
-      #- ./cert:/taiga-cert
-      - taiga-proxy:/taiga-conf
+      - taiga-proxy-conf:/taiga-conf
     environment:
-      - TAIGA_HOST=${TAIGA_HOST}
-      - TAIGA_BACK_HOST=back
-      - TAIGA_FRONT_HOST=front
-      - EVENTS_HOST=events
-      - ENABLE_SSL=${ENABLE_SSL}
-      - CERT_NAME=${CERT_NAME}
-      - CERT_KEY=${CERT_KEY}
+      - TAIGA_BACK_HOST=project-back
+      - TAIGA_FRONT_HOST=project-front
+      - EVENTS_HOST=project-events
+      - ENABLE_SSL=false
+
 
 networks:
 
     taiga-network:
       driver: bridge
 
+
 volumes:
+  taiga-back-conf:
+    driver_opts:
+      type: none
+      device: ${TAIGA_BACK_CONF}
+      o: bind
 
-    taiga-db:
-      driver_opts:
-        type: none
-        device: "${TAIGA_DATA_DB}"
-        o: bind
+  taiga-back-media:
+    driver_opts:
+      type: none
+      device: ${STORAGE_TAIGA_BACK_MEDIA}
+      o: bind
 
-    taiga-back:
-      driver_opts:
-        type: none
-        device: "${TAIGA_DATA_BACK}"
-        o: bind
+  taiga-front-conf:
+    driver_opts:
+      type: none
+      device: ${TAIGA_FRONT_CONF}
+      o: bind
 
-    taiga-back-media:
-      driver_opts:
-        type: none
-        device: "${TAIGA_DATA_BACK_MEDIA}"
-        o: bind
+  taiga-posgresql-db:
+    driver_opts:
+      type: none
+      device: ${TAIGA_POSTGRESQL_DATA}
+      o: bind
 
-    taiga-front:
-      driver_opts:
-        type: none
-        device: "${TAIGA_DATA_FRONT}"
-        o: bind
-
-    taiga-proxy:
-      driver_opts:
-        type: none
-        device: "${TAIGA_DATA_PROXY}"
-        o: bind
-
+  taiga-proxy-conf:
+    driver_opts:
+      type: none
+      device: ${TAIGA_PROXY_CONF}
+      o: bind
